# lib/api-spec/openapi.yaml
@@ -743,6 +743,8 @@ components:
           type: string
         siteSubtitle:
           type: ["string", "null"]
+        siteUrl:
+          type: ["string", "null"]
         bannerText:
           type: ["string", "null"]
         obsKeyEnabled:
@@ -758,6 +760,8 @@ components:
         siteName:
           type: string
         siteSubtitle:
+          type: ["string", "null"]
+        siteUrl:
           type: ["string", "null"]
         bannerText:
           type: ["string", "null"]
